--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="border_grey">#8A8A8A</color>
+    <color name="transparent_border_grey">#448A8A8A</color>
     <color name="text_color_grey">#4D4D4D</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_blue_600">#FF039BE5</color>
